N°1632 When approval status overflowing, avoid "end" and "start" being cropped

--- a/asset/css/status.css
+++ b/asset/css/status.css
@@ -1,8 +1,11 @@
 
 .approval-exec-status {
 	display: flex;
-	justify-content: center;
 	flex-wrap: wrap;
+}
+.approval-exec-status > * {
+	margin-left: auto;
+	margin-right: auto;
 }
 #abort_info{
 	width: 100%;
